修改了端口，登录密码放在了后端

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,20 @@
+# 文件上传配置
+file.upload.path=/tmp
+
+# 访问代码配置（安全设置）
+app.access.code=lay@9527
+
 # 服务器配置
-server.port=8080
+server.port=9829
 server.servlet.context-path=/
 
-# 文件上传配置
-spring.servlet.multipart.enabled=true
-# 单个文件最大大小 (50MB)
-spring.servlet.multipart.max-file-size=50MB
-# 总上传大小限制 (100MB)
-spring.servlet.multipart.max-request-size=100MB
-# 文件写入磁盘的阈值 (提高到10MB，减少临时文件创建)
-spring.servlet.multipart.file-size-threshold=10MB
-# 临时文件位置 (Linux环境)
-spring.servlet.multipart.location=/tmp/fileupload
-
-# 自定义文件上传路径 (Linux环境)
-file.upload.path=/tmp
+# 文件上传大小限制 (500MB)
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 
 # 日志配置
 logging.level.com.fileupload=INFO
-logging.level.org.springframework.web.multipart=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 # 编码配置
 server.servlet.encoding.charset=UTF-8
