--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # 文件上传配置
-file.upload.path=/tmp
+file.upload.path=D:/file_test
+# 目标目录配置（与文件上传路径保持一致）
+file.target.path=${file.upload.path}
 
 # 访问代码配置（安全设置）
 app.access.code=lay@9527
